--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     // s3 호환되는 ceph에도 적용 가능한 sdk
     implementation("software.amazon.awssdk:s3:2.37.5")
     implementation("software.amazon.awssdk:url-connection-client:2.37.5")
+
+    // Swagger/OpenAPI (springdoc)
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'
 }
 
 tasks.named('test') {
