업로드 테스트용 페이지 코드 안맞는 부분 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ ceph:
     access-key: ${ACCESS_KEY}
     secret-key: ${SECRET_KEY}
     region: us
-    bucket: public-files
+    bucket: images
 
 server:
   port: 8088
